--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <div class="row social">
             <div class="col-md-12">
               <ul>
-                <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
+                <!-- <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
                 <li><a href="http://blog.sportscopevideo.com/" target="blank" class="fa fa-tumblr" alt="tumblr"></a></li>
-                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li>
+                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li> -->
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
                 <li><a href="" target="blank" class="fa fa-youtube-play" alt="youtube"></a></li>
@@ -93,15 +93,27 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">EDGE Replay <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Instant Replay <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="edge-software.html">Software</a>
+                <a href="edge-software.html">EDGE Replay</a>
               </li>
               <li>
                 <a href="edge-support.html">Support</a>
               </li>
             </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Compare<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="comparison.html">Endzone Cameras</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="testimonials.html">Testimonials</a>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
@@ -109,28 +121,14 @@
               <li>
                 <a href="about.html">History</a>
               </li>
-              
+              <li>
+                <a href="faq.html">FAQ</a>
+              </li>
               <li>
                 <a href="blog-post.html">Blog</a>
               </li>
+              <li><a href="sports.html">Sports</a></li>
             </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="sports.html">Sports</a>
-              </li>
-              <li>
-                <a href="testimonials.html">Testimonials</a>
-              </li>
-              <li>
-                <a href="comparison.html">Comparison</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="faq.html">FAQ</a>
           </li>
           <li>
             <a href="contact.html">Contact</a>
@@ -153,7 +151,7 @@
   <!-- Marketing Icons Section -->
   <div class="row">
     <div class="col-md-9">
-      <h1 class="picture-text">Rise above the competition.</h1>
+      <h1 class="picture-text">Rise above the competition</h1>
     </div>
     <a href="./edge-software.html">
       <div class="col-md-3 edge-ad">
@@ -281,6 +279,8 @@
       <div class="row">
         <div class="col-md-3">
           <p><a href="">Privacy Policy</a></p>
+          <small>
+            <p class="bottom">&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p></small>
 
         </div>
         <div class="col-md-3">
@@ -294,12 +294,7 @@
           <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <small class="center">
-            <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
-          </small>
-        </div>
+      
       </div>
     </footer>
   </div>
