--- a/accessories.html
+++ b/accessories.html
@@ -54,9 +54,9 @@
           <div class="row social">
             <div class="col-md-12">
               <ul>
-                <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
+                <!-- <li><a href=" https://www.pinterest.com/sportscopevideo/" target="blank" class="fa fa-pinterest" alt="pinterest"></a></li>
                 <li><a href="http://blog.sportscopevideo.com/" target="blank" class="fa fa-tumblr" alt="tumblr"></a></li>
-                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li>
+                <li><a href="https://www.linkedin.com/company/sport-scope-inc-?trk=hb_tab_compy_id_2838688" target="blank" class="fa fa-linkedin" alt="linkedin"></a></li> -->
                 <li><a href="" target="blank" class="fa fa-facebook" alt="facebook"></a></li>
                 <li><a href="" target="blank" class="fa fa-twitter" alt="twitter"></a></li>
                 <li><a href="" target="blank" class="fa fa-youtube-play" alt="youtube"></a></li>
@@ -93,15 +93,27 @@
             </ul>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">EDGE Replay <b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Instant Replay <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li>
-                <a href="edge-software.html">Software</a>
+                <a href="edge-software.html">EDGE Replay</a>
               </li>
               <li>
                 <a href="edge-support.html">Support</a>
               </li>
             </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Compare<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="comparison.html">Endzone Cameras</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="testimonials.html">Testimonials</a>
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">About <b class="caret"></b></a>
@@ -109,28 +121,14 @@
               <li>
                 <a href="about.html">History</a>
               </li>
-              
+              <li>
+                <a href="faq.html">FAQ</a>
+              </li>
               <li>
                 <a href="blog-post.html">Blog</a>
               </li>
+              <li><a href="sports.html">Sports</a></li>
             </ul>
-          </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">In Action <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li>
-                <a href="sports.html">Sports</a>
-              </li>
-              <li>
-                <a href="testimonials.html">Testimonials</a>
-              </li>
-              <li>
-                <a href="comparison.html">Comparison</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a href="faq.html">FAQ</a>
           </li>
           <li>
             <a href="contact.html">Contact</a>
@@ -195,6 +193,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
+                <img src="./img/accessory/memory.jpg" alt="">
                 Each Sport Scope endzone camera comes standard with a 32 GB memory card that will hold 8 hrs or HD video. The best thing about using a memory card is that they are extremely versatile, easy to use, and durable. Each football coach or each sport can have their own memory card, so the camcorder is never needed to watch the video you record, which always leaves the endzone camera available for use. Memory cards quickly transfer video to your computer, which can then uploaded to your editing software, such as, Hudl or can be made into DVDs for coaches, parents, and players. Flash memory card camcorders are much more durable than internal hard drive camcorders because they do not contain moving parts than can be easily damaged from even small vibrations. 
               </div>
             </div>
@@ -210,6 +209,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
+                <img src="./img/accessory/battery.jpg" alt="">
                 <p>The Quick Scope comes standard with one of the largest batteries Sony makes for their camcorders. This battery lasts 6-7 hrs, which will allow you to film several games on one charge.</p> 
               </div>
             </div>
@@ -225,6 +225,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
+               <img src="./img/accessory/battery-monitor.jpg" alt="">
                <p>The Sport Scope is the only endzone camera that comes standard with a high definition monitor and a long lasting battery to power that monitor. This battery will power your monitor for 4-6 hrs.</p>  
              </div>
            </div>
@@ -240,6 +241,7 @@
           </div>
           <div id="collapseFour" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/remote.png" alt="">
               <p>The Sony camera remote allows the user to zoom in and out as they record with their endzone camera. You can also turn on/off the camcorder with this remote, which means you can conserve battery during halftime, between quarters, etc. The user can also put the camcorder in record or standby mode, allowing for the operator to only record the plays they want. This allows for smaller, more precise clips of only the action in the plays, which cuts down on transfer and analysis time.</p> 
             </div>
           </div>
@@ -255,6 +257,7 @@
           </div>
           <div id="collapseFive" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/cable.jpg" alt="">
               <p>Each Sport Scope comes with a 30ft. custom cable that has three color coded connections at the top and three color coded connections at the bottom for camera controls, video output, and pan/tilt control. Our one cable end zone camera system allows for a quick and easy set up. The cable is also protected with an abrasion resistant cover to protect the life of the cable. </p> 
             </div>
           </div>
@@ -270,6 +273,7 @@
           </div>
           <div id="collapseSix" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/raincover.jpg" alt="">
               <p>Each Sport Scope comes standard with all the rain protection you need to cover your electronic components. The rain cover is used to protect the camcorder and pan/tilt head while operating your endzone camera in the rain/snow. <em>While this cover is 100% waterproof and a proven product in outdoor photography, we urge our customers to properly use this cover and use their best judgment while filming in harsh weather.</em></p> 
             </div>
           </div>
@@ -285,6 +289,7 @@
           </div>
           <div id="collapseSeven" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/chair.jpg" alt="">
               <p>The Sport Scope is the only endzone camera that supplies the user with everything they need to comfortable sit down while they operate their end zone camera. Just detach the control plate from the tower and sit it in your lap to film.</p>
             </div>
           </div>
@@ -300,6 +305,7 @@
           </div>
           <div id="collapseEight" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/raincover-screen.jpg" alt="">
               <p>The control cover is a 100% waterproof, clear cover that protects the control center (monitor, Sony remote, and joystick) from harsh weather. Without this important piece of rain gear it would be too risky to use an endzone camera is harsh weather.</p>              
             </div>
           </div>
@@ -320,6 +326,7 @@
           </div>
           <div id="collapseNine" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/reader.jpg" alt="">
               <p>Each Sport Scope comes standard with a memory card reader that allows for quick and easy transferring of video from the memory card to a computer. We know that most computers do not have memory cards slots, so we supply one as part of our complete endzone camera package.</p>
             </div>
           </div>
@@ -335,6 +342,7 @@
           </div>
           <div id="collapseTen" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/monitor.jpg" alt="">
               <p>The Sport Scope is the only endzone camera that comes standard with a 9" high resolution LCD monitor. The 9" display allows the operator to clearly see everything they are filming to ensure the best quality game and practice film. 
               </p> 
             </div>
@@ -351,6 +359,7 @@
           </div>
           <div id="collapseEleven" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/sunhood.jpg" alt="">
               <p>The sun hood protects against the glare of the sun, so the operator of the endzone camera can see exactly what they are filming to ensure they capture the best film possible. </p> 
             </div>
           </div>
@@ -366,6 +375,7 @@
           </div>
           <div id="collapseTwelve" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/joystick.jpg" alt="">
               <p>The Sport Scope's pan/tilt joystick is unique to the endzone camera industry. The operator can control the movement of the camera with an easy to use joystick instead of manually moving the entire tower left and right and using a lever to move the camera up and down. Our joystick also allows the operator to control the speed of the pan and the speed on the tilt individually for a truly customized filming experience. The versatility in speed control also allows our endzone camera to be used more effectively with different sports. You can slow down the speed of the pan/tilt for a slow paced sport or speed it up for a fast paced sport. 
               </p> 
             </div>
@@ -382,6 +392,7 @@
           </div>
           <div id="collapseThirteen" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/hardcase.jpg" alt="">
               <p>The hard case protects and organizes all the important electronics that make up our complete end zone camera package. The hard case is an important part of our system because it ensures that the most vulnerable parts of the endzone camera are always safe and accounted for. 
               </p>
             </div>
@@ -398,6 +409,7 @@
           </div>
           <div id="collapseFourteen" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/lenshood.jpg" alt="">
               <p>The lens hood helps block the camcorder's lens from the sun and is also an important part of the rain gear package. 
               </p>
             </div>
@@ -414,6 +426,7 @@
           </div>
           <div id="collapseFifteen" class="panel-collapse collapse">
             <div class="panel-body">
+              <img src="./img/accessory/level.jpg" alt="">
               <p>Each Sport Scope comes standard with a magnetic level that allows for the user to perfectly level their end zone camera before the poles are raised. Leveling the end zone camera ensures that the poles will be structurally sound and that the film itself with be level too.</p>
             </div>
           </div>
@@ -443,6 +456,8 @@
       <div class="row">
         <div class="col-md-3">
           <p><a href="">Privacy Policy</a></p>
+          <small>
+            <p class="bottom">&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p></small>
 
         </div>
         <div class="col-md-3">
@@ -456,12 +471,7 @@
           <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <small class="center">
-            <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
-          </small>
-        </div>
+      
       </div>
     </footer>
   </div>
