--- a/footer.html
+++ b/footer.html
@@ -6,6 +6,8 @@
       <div class="row">
         <div class="col-md-3">
           <p><a href="">Privacy Policy</a></p>
+          <small>
+            <p class="bottom">&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p></small>
 
         </div>
         <div class="col-md-3">
@@ -19,12 +21,7 @@
           <button type="button" class="btn btn-donate"><h4>Donate to </h4><img src="./img/specialOlympics.svg" alt="special Olympics"></button>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-12">
-          <small class="center">
-            <p>&copy; 2016 <a href="./index.html">Sport Scope</a> Endzone Cameras</p>
-          </small>
-        </div>
+      
       </div>
     </footer>
   </div>
