--- a/accessories.html
+++ b/accessories.html
@@ -189,7 +189,9 @@
                 32 GB Flash Memory Card</a>
               </h4>
               <span>$40</span>
-              <button type="button" class="btn btn-xs right">Add to Cart</button>
+              
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="32 GB Flash Memory Card"> <input name="amount" type="hidden" value="40.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"><input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
+                
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
               <div class="panel-body">
@@ -205,7 +207,7 @@
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Extended Camera Battery</a>
               </h4>
               <span>$65</span>            
-              <button type="button" class="btn btn-xs right">Add to Cart</button>
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Extended Camera Battery"> <input name="amount" type="hidden" value="65.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="20.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
               <div class="panel-body">
@@ -221,7 +223,7 @@
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Monitor Battery</a>
               </h4>
               <span>$75</span>            
-              <button type="button" class="btn btn-xs right">Add to Cart</button>
+              <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Monitor Battery"> <input name="amount" type="hidden" value="75.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="20.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
               <div class="panel-body">
@@ -237,7 +239,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Sony Remote</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Sony Camera Remote"> <input name="amount" type="hidden" value="50.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseFour" class="panel-collapse collapse">
             <div class="panel-body">
@@ -253,7 +255,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">Cable</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Cable"> <input name="amount" type="hidden" value="195.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="20.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseFive" class="panel-collapse collapse">
             <div class="panel-body">
@@ -269,7 +271,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix">Rain Cover</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Rain Cover"> <input name="amount" type="hidden" value="40.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseSix" class="panel-collapse collapse">
             <div class="panel-body">
@@ -285,7 +287,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Sports Chair</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Sports Chair"> <input name="amount" type="hidden" value="35.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseSeven" class="panel-collapse collapse">
             <div class="panel-body">
@@ -301,7 +303,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEight">Control Cover</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Control Cover"> <input name="amount" type="hidden" value="45.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseEight" class="panel-collapse collapse">
             <div class="panel-body">
@@ -322,7 +324,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNine">Memory Card Reader</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Memory Card Reader"> <input name="amount" type="hidden" value="15.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseNine" class="panel-collapse collapse">
             <div class="panel-body">
@@ -338,7 +340,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">9" LCD Monitor</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Monitor"> <input name="amount" type="hidden" value="249.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="30.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseTen" class="panel-collapse collapse">
             <div class="panel-body">
@@ -355,7 +357,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven">7" Sun Hood</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Sun Hood"> <input name="amount" type="hidden" value="30.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseEleven" class="panel-collapse collapse">
             <div class="panel-body">
@@ -371,7 +373,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">Pan/Tilt Joystick</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Pan / Tilt Joystick"> <input name="amount" type="hidden" value="195.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="20.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseTwelve" class="panel-collapse collapse">
             <div class="panel-body">
@@ -388,7 +390,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThirteen">Hard Case</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Hard Case"> <input name="amount" type="hidden" value="65.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseThirteen" class="panel-collapse collapse">
             <div class="panel-body">
@@ -405,7 +407,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">Lens Hood</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Lens Hood"> <input name="amount" type="hidden" value="15.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="12.50"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseFourteen" class="panel-collapse collapse">
             <div class="panel-body">
@@ -422,7 +424,7 @@
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen">Level</a>
             </h4>
             <span>$50</span>            
-            <button type="button" class="btn btn-xs right">Add to Cart</button>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="Level"> <input name="amount" type="hidden" value="20.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="10.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:cart.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" type="button" class="btn btn-xs right" value="Add to Cart"></form>
           </div>
           <div id="collapseFifteen" class="panel-collapse collapse">
             <div class="panel-body">
