--- a/edge-software.html
+++ b/edge-software.html
@@ -142,7 +142,7 @@
 
 
 ;
-<div class="container-fluid first-row row photo-bg-edge" style="background-image: url('./img/edge/IMG_0940.jpg');">
+<div class="container-fluid first-row row photo-bg-edge" style="background-image: url('./img/edge/IMG_0940.png');">
  <div class="row"> 
   <div class="col-md-12">
     <h1 class="light-text center picture-text">Instant Replay made easy</h1>
@@ -160,7 +160,7 @@
     <h1>How It Works</h1>
   </div>
 </div>
-<div class="container-fluid field-bg">
+<div class="container-fluid">
  <div class="row first-row">
   <div class="col-md-6">
    <iframe src="https://www.youtube.com/embed/Sw2PuQu1xK0" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
@@ -233,7 +233,7 @@
      <h1>Software &amp; App Features</h1>
    </div>
  </div>
- <div class="container-fluid field-bg">
+ <div class="container-fluid">
    <div class="row first-row">
     <div class="col-md-6">
 
@@ -284,10 +284,9 @@
  <div class="panel panel-default edge-panel">
     <div class="panel-heading">
      <h4 class="panel-title">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-tags fa-lg"></i> Multiple Synced Camera Angles</a>
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree"><i class="fa fa-arrows-alt fa-lg"></i> Multiple Synced Camera Angles</a>
     </h4>
-    <h5>Tag ODK, down &amp; distance, hash,
-      YL, play type, net yards and more</h5>
+    <h5></h5>
     </div>
     <div id="collapseThree" class="panel-collapse collapse">
       <div class="panel-body">
@@ -340,12 +339,11 @@
  <div class="panel panel-default edge-panel">
   <div class="panel-heading">
    <h4 class="panel-title">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSix"><i class="fa fa-cogs fa-lg"></i> Picture in Picture Angle Switching</a>
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapsePip"><i class="fa fa-tasks fa-lg"></i> Picture in Picture Angle Switching</a>
   </h4>
-  <h5>The EDGE software does everything
-    for you. Just use the remote to record/stop each play.</h5>
+  <h5></h5>
   </div>
-  <div id="collapseSix" class="panel-collapse collapse">
+  <div id="collapsePip" class="panel-collapse collapse">
     <div class="panel-body">
      <p>Switch between angles by using the picture in picture (PIP) screen in the bottom right corner of the video player.  The playback of each angle will stay synced as you switch between angles with the PIP.</p> 
    </div>
@@ -354,7 +352,7 @@
  <div class="panel panel-default edge-panel">
   <div class="panel-heading">
    <h4 class="panel-title">
-    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseStats"><i class="fa fa-cogs fa-lg"></i> Game Stats &amp; Oponent Tendancies</a>
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseStats"><i class="fa fa-cog fa-lg"></i> Game Stats &amp; Oponent Tendancies</a>
   </h4>
   <h5>Coming Soon!</h5>
   </div>
@@ -363,7 +361,7 @@
 </div>
 
 <div class="col-md-6">
- <iframe src="https://www.youtube.com/embed/nI9vglei4Rg" frameborder="0" allowfullscreen class="iframe-lg"></iframe>
+ <img src="./img/edge/5.jpg" alt="">
 </div>
 
 </div>
@@ -375,9 +373,55 @@
     <h1>Hardware</h1>
   </div>
 </div>
-<div class="container-fluid field-bg">
+<div class="container-fluid">
  <div class="first-row">
-   <div class="col-md-3 col-sm-12">
+<div class="col-md-4 col-sm-12">
+  <div class="panel panel-default edge-panel">
+   <div class="panel-heading">
+    <h4 class="panel-title text-center">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseCompact"><i class="fa fa-cube fa-lg"></i> Compact</a>
+   </h4>
+   <h5 class="text-center"></h5>
+ </div>
+ <div id="collapseCompact" class="panel-collapse collapse">
+   <div class="panel-body">
+    <p>Weighing in at 6 Oz and measuring 4”x 2.5” x 1.7”, the EDGE Recording Box is the most compact replay box on the market.   The box replaces the laptop and/or capture card that other replay systems use.  The box is made out of aluminum, is powder coated, and all the ports are labeled for easy setup.</p> 
+  </div>
+</div>
+</div>
+</div>
+<div class="col-md-4 col-sm-12">
+  <div class="panel panel-default edge-panel">
+   <div class="panel-heading">
+    <h4 class="panel-title text-center">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNoPower"><i class="fa fa-plug fa-lg"></i> No Power Outlets Needed</a>
+   </h4>
+   <h5 class="text-center"></h5>
+ </div>
+ <div id="collapseNoPower" class="panel-collapse collapse">
+   <div class="panel-body">
+    <p>EDGE Replay is completely battery powered, so no power outlets are needed. Other replay systems may need power outlets in the end zone and/or sideline.</p> 
+  </div>
+</div>
+</div>
+</div>
+<div class="col-md-4 col-sm-12">
+  <div class="panel panel-default edge-panel">
+   <div class="panel-heading">
+    <h4 class="panel-title text-center">
+     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseNoLaptop"><i class="fa fa-thumbs-o-up fa-lg"></i> No Laptop Needed</a>
+   </h4>
+   <h5 class="text-center"></h5>
+ </div>
+ <div id="collapseNoLaptop" class="panel-collapse collapse">
+   <div class="panel-body">
+    <p>The EDGE Recording Box eliminates the need for costly laptops and capture cards.</p> 
+  </div>
+</div>
+</div>
+</div>
+
+   <div class="col-md-4 col-sm-12">
     <div class="panel panel-default edge-panel">
      <div class="panel-heading">
       <h4 class="panel-title text-center">
@@ -393,7 +437,7 @@
     </div>
   </div>
 </div>
-<div class="col-md-3 col-sm-12">
+<div class="col-md-4 col-sm-12">
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
@@ -408,7 +452,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-3 col-sm-12">
+<div class="col-md-4 col-sm-12">
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
@@ -423,7 +467,7 @@
 </div>
 </div>
 </div>
-<div class="col-md-3 col-sm-12">
+<div class="col-md-4 col-sm-12">
   <div class="panel panel-default edge-panel">
    <div class="panel-heading">
     <h4 class="panel-title text-center">
@@ -438,6 +482,7 @@
 </div>
 </div>
 </div>
+
 </div>
 </div>
 </div>
@@ -450,7 +495,7 @@
     <h1>Pricing &amp; Packages</h1>
   </div>
 </div>
-<div class="container-fluid photo-bg" style="background-image: url('./img/edge/IMG_0940.jpg');">
+<div class="container-fluid photo-bg" style="background-image: url('./img/martinStadium.jpg');">
  <div class="first-row">
   <div class="col-md-1"></div>
   <div class="col-md-4">
@@ -459,27 +504,23 @@
      <h3 class="panel-title">One View</h3>
    </div>
    <div class="panel-body">
-     <span class="price"><sup>$</sup>1,995</span>
-     <span class="period">per year</span>
+     <span class="price"><small>$</small>1,199</span>
 
    </div>
    <ul class="list-group">
      <li class="list-group-item"><strong>1 year</strong> software license</li>
-     <li class="list-group-item"><strong>All</strong> software &amp; app updates</li>
-     <li class="list-group-item"><strong>$395</strong> software renewal after first year</li>
+     <li class="list-group-item"><strong>All</strong> software &amp; hardware updates</li>
+     <li class="list-group-item"><strong>$499</strong> software renewal after first year</li>
      <li role="separator" class="divider"></li>
-
+    <li class="list-group-item">EDGE <strong>recording box</strong> </br><em>Stores entire season!</em></li>
      <li class="list-group-item">High-power <strong>wireless router</strong></li>
-     <li class="list-group-item"><strong>Router battery</strong> for endzone use</li>
-     <li class="list-group-item">Router antenna with <strong>1000 ft distance</strong></li>
-     <li class="list-group-item">Antenna mount</li>
+     <li class="list-group-item"><strong>Router mount</strong></li>
      <li class="list-group-item"><strong>Waterproof</strong> Pelican hard case</li>
-     <li class="list-group-item"><strong>Custom</strong> hard case foam</li>
-     <li class="list-group-item"><strong>HD</strong> capture device</li>
-     <li class="list-group-item">Record button with <strong>10 ft cable</strong></li>
-     <li class="list-group-item"><strong>All</strong> HDMI cables/splitters needed</li>
+     <li class="list-group-item"><strong>Battery</strong> for router &amp; recording box</li>
+     <li class="list-group-item"><strong>HDMI</strong> cable</li>
      <li class="list-group-item"><strong>EDGE support</strong></li>
-     <li class="list-group-item"><a href="#" class="btn btn-primary">Order Now</a>
+     <li class="list-group-item"><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal">
+<p style="text-align: center;"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="EDGE - 1 View"> <input name="amount" type="hidden" value="1199.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="50.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest">    <input alt="PayPal - The safer, easier way to pay online!" name="submit" class="btn center" value="Order Now" type="button">
      </li>
    </ul>
  </div>
@@ -496,28 +537,26 @@
 
   </div>
   <ul class="list-group">
-    <li class="list-group-item"><strong>1 year</strong> software license <em>x2</em></li>
-    <li class="list-group-item"><strong>All</strong> software &amp; app updates <em>x2</em></li>
-    <li class="list-group-item"><strong>$395</strong> software renewal after first year</li>
-    <li role="separator" class="divider"></li>
-
-    <li class="list-group-item">High-power <strong>wireless router</strong> <em>x2</em></li>
-    <li class="list-group-item"><strong>Router battery</strong> for endzone use</li>
-    <li class="list-group-item">Router antenna with <strong>1000 ft distance</strong> <em>x2</em></li>
-    <li class="list-group-item">Antenna mount <em>x2</em></li>
-    <li class="list-group-item"><strong>Waterproof </strong> Pelican hard case <em>x2</em></li>
-    <li class="list-group-item"><strong>Custom</strong> hard case foam <em>x2</em></li>
-    <li class="list-group-item"><strong>HD</strong> capture device</li>
-    <li class="list-group-item">Record button with <strong>10 ft cable</strong> <em>x2</em></li>
-    <li class="list-group-item"><strong>All</strong> HDMI cables/splitters needed</li>
-    <li class="list-group-item"><strong>EDGE support</strong></li>
-    <li class="list-group-item"><a href="#" class="btn btn-primary">Order Now</a>
+     <li class="list-group-item"><strong>1 year</strong> software license</li>
+     <li class="list-group-item"><strong>All</strong> software &amp; hardware updates</li>
+     <li class="list-group-item"><strong>$499</strong> software renewal after first year</li>
+     <li role="separator" class="divider"></li>
+    <li class="list-group-item">EDGE <strong>recording box</strong> <em>x2</em> </br><em>Stores entire season!</em></li>
+     <li class="list-group-item">High-power <strong>wireless router</strong></li>
+     <li class="list-group-item"><strong>Router mount</strong></li>
+     <li class="list-group-item"><strong>Waterproof</strong> Pelican hard case</li>
+     <li class="list-group-item"><strong>Battery</strong> for router &amp; recording box <em>x 2</em></li>
+     <li class="list-group-item"><strong>HDMI</strong> cable <em>x 2</em></li>
+     <li class="list-group-item"><strong>EDGE support</strong></li>
+    <li class="list-group-item"><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input name="cmd" type="hidden" value="_cart"> <input name="business" type="hidden" value="info@sportscopevideo.com"> <input name="lc" type="hidden" value="US"> <input name="item_name" type="hidden" value="EDGE - 2 View"> <input name="amount" type="hidden" value="2995.00"> <input name="currency_code" type="hidden" value="USD"> <input name="button_subtype" type="hidden" value="products"> <input name="no_note" type="hidden" value="0"> <input name="shipping" type="hidden" value="75.00"> <input name="add" type="hidden" value="1"> <input name="bn" type="hidden" value="PP-ShopCartBF:order.png:NonHostedGuest"> <input alt="PayPal - The safer, easier way to pay online!" name="submit" class="btn center" value="Order Now" type="button">
     </li>
   </ul>
 </div>
 </div>
 </div>
-
+<div class="col-md-12">
+  <p class="light-text">Photo courtesy of <a href="https://en.wikipedia.org/wiki/Washington_State_Cougars_football#/media/File:WSUMartinStadium-08-16-2012.jpg">Jdubman</a>.</p>
+</div>
 
 </div>
 
