--- a/edge-support.html
+++ b/edge-support.html
@@ -176,15 +176,20 @@
   <div class="first-row">
     <div class="col-md-6">
       <h3>Setting Up Your EDGE Replay Wireless Router and Antenna</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GKbFsbshIGw" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/160780822" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <div class="col-md-6">
       <h3>Turn off firewall on your laptop to download EDGE Software</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/PMGqnForAzk" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/160781272" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    
+    <div class="col-md-6">
+      <h3>Set Up EDGE Instant Replay</h3>
+      <iframe src="https://player.vimeo.com/video/160780683" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <div class="col-md-6">
       <h3>Upload EDGE Video Footage To hudl</h3>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/n8RgZzDGsps" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/160781051" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <div class="col-md-6 text-center">
       <h3>If further support is required, please <a href="contact.html">contact us</a>:</h3>
